# frame_latency_meter

./: .clang-format  CMakeLists.txt  README.md
documentation/: users_guide.md
source/flm_backend/: CMakeLists.txt  DrawRectsBGRA_64.h  flm.h  flm.ini  flm_capture_amf.cpp  flm_capture_amf.h  flm_capture_context.cpp  flm_capture_context.h  flm_capture_dxgi.cpp  flm_capture_dxgi.h  flm_keyboard.cpp  flm_keyboard.h  flm_mouse.cpp  flm_mouse.h  flm_pipeline.cpp  flm_pipeline.h  flm_timer.cpp  flm_timer.h  flm_user_interface.cpp  flm_user_interface.h  flm_utils.cpp  flm_utils.h  version.h
source/flm_cli/: CMakeLists.txt  flm_help.h  main.cpp  main.h
source/flm_cli/resources/: mainapp.rc  resource.h
